[package]
name = "go-fvm-sdk-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmprinter = "0.2.34"
wasmparser = "0.84.0"
wast = "40.0.0"
wabt = "0.10.0"
wat = "1.0"   #parse WAT to binary WebAssembly
anyhow ="1.0.57"
parity-wasm = { git="https://github.com/hunjixin/parity-wasm", branch = "feat/allow_unparsed_names"}
clap = { version = "3.1.15", features = ["derive"] }
