[package]
name = "go-fvm-sdk-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmprinter = "0.2.34"
wasmparser = "0.84.0"
wast = "40.0.0"
wabt = "0.10.0"
wat = "1.0"   #parse WAT to binary WebAssembly
anyhow ="1.0.57"
parity-wasm = { git="https://github.com/hunjixin/parity-wasm", branch = "feat/allow_unparsed_names"}
clap = { version = "3.1.15", features = ["derive"] }
colored = "2"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsecp256k1 = "0.7.0"
rand = "0.8.5"
rand_chacha = "0.3"
hex = "0.4.3"
path-absolutize = "3.0.13"
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }

fvm = {  git = "https://github.com/filecoin-project/ref-fvm.git", branch = "experimental/fvm-m2", default-features = false}
fvm_shared = {  git = "https://github.com/filecoin-project/ref-fvm.git", branch = "experimental/fvm-m2" }
fvm_ipld_hamt = {  git = "https://github.com/filecoin-project/ref-fvm.git", branch = "experimental/fvm-m2"}
fvm_ipld_amt = { git = "https://github.com/filecoin-project/ref-fvm.git", branch = "experimental/fvm-m2" }
fvm_ipld_car = { git = "https://github.com/filecoin-project/ref-fvm.git" , branch = "experimental/fvm-m2" }
fvm_ipld_blockstore = { git = "https://github.com/filecoin-project/ref-fvm.git" , branch = "experimental/fvm-m2" }
fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm.git", branch = "experimental/fvm-m2"  }
fvm_integration_tests = { git = "https://github.com/filecoin-project/ref-fvm.git", branch = "experimental/fvm-m2" }
