[package]
name = "go-fvm-sdk-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmprinter = "0.2.34"
wasmparser = "0.84.0"
wast = "40.0.0"
wabt = "0.10.0"
wat = "1.0"   #parse WAT to binary WebAssembly
anyhow = {version="1.0.47",  features = ["backtrace"]}
parity-wasm = { git="https://github.com/hunjixin/parity-wasm", branch = "master", features=["sign_ext","bulk","non_trapping_float_to_int"]}
clap = { version = "3.1.15", features = ["derive"] }
colored = "2"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsecp256k1 = "0.7.0"
rand = "0.8.5"
rand_chacha = "0.3"
hex = "0.4.3"
path-absolutize = "3.0.13"
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
xshell = "0.2"
walkdir = "2"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

actors-v10 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", branch = "next", features = ["m2-native"] }
fvm = {  git = "https://github.com/filecoin-project/ref-fvm",  features = ["m2-native","testing"]}
fvm_shared = {  git = "https://github.com/filecoin-project/ref-fvm"}
fvm_ipld_blockstore = { git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm"}
fvm_integration_tests = { git = "https://github.com/filecoin-project/ref-fvm",   features = ["m2-native"]}
