[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm = {  git = "https://github.com/ipfs-force-community/ref-fvm", branch="feat/support_predefined_addr", default-features = false}
fvm_shared = {  git = "https://github.com/ipfs-force-community/ref-fvm", branch="feat/support_predefined_addr" }
fvm_ipld_hamt = {  git = "https://github.com/ipfs-force-community/ref-fvm", branch="feat/support_predefined_addr"}
fvm_ipld_amt = { git = "https://github.com/ipfs-force-community/ref-fvm", branch="feat/support_predefined_addr" }
fvm_ipld_car = { git = "https://github.com/ipfs-force-community/ref-fvm" , branch="feat/support_predefined_addr" }
fvm_ipld_blockstore = { git = "https://github.com/ipfs-force-community/ref-fvm" , branch="feat/support_predefined_addr" }
fvm_ipld_encoding = { git = "https://github.com/ipfs-force-community/ref-fvm", branch="feat/support_predefined_addr"  }
fvm_integration_tests = { git = "https://github.com/ipfs-force-community/ref-fvm", branch="feat/support_predefined_addr" }

num-traits = "0.2"
clap = { version = "3.1.15", features = ["derive"] }
wabt = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsecp256k1 = "0.7.0"
rand = "0.8.5"
rand_chacha = "0.3"
hex = "0.4.3"
anyhow = "1.0.47"
